# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yaml
hooks/: github_actions_hash.py
tests/: github_actions_hash_test.py
